change image and change text

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
 </head>
 <body>
   <header>
-    <h1>Cek Kelulusan Siswa Tahun 2025</h1>
+    <h1>Cek Kelulusan Siswa SD 2 Jurang Tahun 2025</h1>
   </header>
   <main>
     <div class="container" id="loginPage">
-      <img src="https://cdn-icons-png.flaticon.com/512/3135/3135743.png" alt="Ilustrasi Kelulusan" class="illustration">
+      <img src="https://awsimages.detik.net.id/community/media/visual/2023/05/02/lambang-tut-wuri-handayani.png?w=589" alt="Ilustrasi Kelulusan" class="illustration">
       <h2>Masuk untuk Melihat Hasil</h2>
       <input type="text" id="nama" placeholder="Nama Lengkap">
       <input type="text" id="nis" placeholder="NIS">
