--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pengumuman Kelulusan 2025</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
@@ -52,15 +52,22 @@
       position: relative;
       z-index: 1;
     }
-    input[type="text"] {
+    
+    /* Samakan ukuran dan style input dan tombol */
+    input[type="text"],
+    button {
       width: 100%;
       padding: 0.75rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
+      font-size: 1rem;
       border-radius: 10px;
-      transition: all 0.3s ease;
+      box-sizing: border-box;
       position: relative;
       z-index: 1;
+    }
+    input[type="text"] {
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      transition: all 0.3s ease;
     }
     input[type="text"]:focus {
       border-color: #007bff;
@@ -68,22 +75,18 @@
       outline: none;
     }
     button {
-      width: 100%;
-      padding: 0.75rem;
       background-color: #005ea2;
       color: white;
       border: none;
-      border-radius: 10px;
-      font-size: 1rem;
       cursor: pointer;
       transition: transform 0.3s ease, background-color 0.3s ease;
-      position: relative;
-      z-index: 1;
+      margin-top: 0.5rem;
     }
     button:hover {
       background-color: #004080;
       transform: scale(1.03);
     }
+    
     .note {
       margin-top: 1rem;
       font-size: 0.9rem;
@@ -107,6 +110,18 @@
     .back-btn {
       margin-top: 1.5rem;
       background-color: #f0ad4e;
+      width: 100%;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      position: relative;
+      z-index: 1;
+    }
+    .back-btn:hover {
+      background-color: #d89627;
     }
     .hidden {
       display: none;
@@ -140,6 +155,20 @@
       0% { transform: scale(0.8); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
+
+    /* Responsif untuk HP */
+    @media (max-width: 480px) {
+      .container {
+        padding: 1.5rem;
+        margin: 1rem;
+      }
+      input[type="text"],
+      button,
+      .back-btn {
+        padding: 0.65rem;
+        font-size: 0.95rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -148,12 +177,18 @@
   </header>
   <main>
     <div class="container" id="loginPage">
-      <img src="https://awsimages.detik.net.id/community/media/visual/2023/05/02/lambang-tut-wuri-handayani.png?w=589" alt="Ilustrasi Kelulusan" class="illustration">
+      <img
+        src="https://awsimages.detik.net.id/community/media/visual/2023/05/02/lambang-tut-wuri-handayani.png?w=589"
+        alt="Ilustrasi Kelulusan"
+        class="illustration"
+      />
       <h2>Masuk untuk Melihat Hasil</h2>
-      <input type="text" id="nama" placeholder="Nama Lengkap">
-      <input type="text" id="nis" placeholder="NIS">
+      <input type="text" id="nama" placeholder="Nama Lengkap" />
+      <input type="text" id="nis" placeholder="NIS" />
       <button onclick="cekKelulusan()">Lihat Hasil</button>
-      <p class="note">Masukkan nama lengkap dan NIS sesuai data sekolah untuk melihat status kelulusan Anda.</p>
+      <p class="note">
+        Masukkan nama lengkap dan NIS sesuai data sekolah untuk melihat status kelulusan Anda.
+      </p>
     </div>
 
     <div class="container hidden" id="resultPage">
@@ -181,36 +216,45 @@
     ];
 
     function cekKelulusan() {
-      const nama = document.getElementById('nama').value.trim();
-      const nis = document.getElementById('nis').value.trim();
-      const siswa = dataSiswa.find(s => s.nama.toLowerCase() === nama.toLowerCase() && s.nis === nis);
+      const nama = document.getElementById("nama").value.trim();
+      const nis = document.getElementById("nis").value.trim();
+      const siswa = dataSiswa.find(
+        (s) => s.nama.toLowerCase() === nama.toLowerCase() && s.nis === nis
+      );
 
       if (siswa) {
-        document.getElementById('resultNama').innerText = siswa.nama;
-        document.getElementById('resultNIS').innerText = `NIS: ${siswa.nis}`;
+        document.getElementById("resultNama").innerText = siswa.nama;
+        document.getElementById("resultNIS").innerText = `NIS: ${siswa.nis}`;
         if (siswa.lulus) {
-          document.getElementById('resultStatus').innerText = "Selamat, Anda LULUS!";
-          document.getElementById('resultPesan').innerText = "Selamat! Ini adalah awal dari perjalanan panjang menuju impianmu. Teruslah belajar dan berkarya!";
+          document.getElementById("resultStatus").innerText = "Selamat, Anda LULUS!";
+          document.getElementById(
+            "resultPesan"
+          ).innerText =
+            "Selamat! Ini adalah awal dari perjalanan panjang menuju impianmu. Teruslah belajar dan berkarya!";
         } else {
-          document.getElementById('resultStatus').innerText = "Mohon Maaf, Anda BELUM LULUS.";
-          document.getElementById('resultPesan').innerText = "Jangan menyerah. Kegagalan hari ini bukan akhir dari segalanya, tapi batu loncatan menuju kesuksesanmu.";
+          document.getElementById("resultStatus").innerText =
+            "Mohon Maaf, Anda BELUM LULUS.";
+          document.getElementById(
+            "resultPesan"
+          ).innerText =
+            "Jangan menyerah. Kegagalan hari ini bukan akhir dari segalanya, tapi batu loncatan menuju kesuksesanmu.";
         }
-        document.getElementById('loginPage').classList.add('hidden');
-        const resultPage = document.getElementById('resultPage');
-        resultPage.classList.remove('hidden');
-        resultPage.classList.add('pop');
+        document.getElementById("loginPage").classList.add("hidden");
+        const resultPage = document.getElementById("resultPage");
+        resultPage.classList.remove("hidden");
+        resultPage.classList.add("pop");
       } else {
         alert("Data tidak ditemukan. Periksa kembali nama dan NIS Anda.");
       }
     }
 
     function kembali() {
-      document.getElementById('loginPage').classList.remove('hidden');
-      const resultPage = document.getElementById('resultPage');
-      resultPage.classList.add('hidden');
-      resultPage.classList.remove('pop');
-      document.getElementById('nama').value = "";
-      document.getElementById('nis').value = "";
+      document.getElementById("loginPage").classList.remove("hidden");
+      const resultPage = document.getElementById("resultPage");
+      resultPage.classList.add("hidden");
+      resultPage.classList.remove("pop");
+      document.getElementById("nama").value = "";
+      document.getElementById("nis").value = "";
     }
   </script>
 </body>
